[gd_scene load_steps=4 format=3 uid="uid://e52wgw1gp4u0"]

[ext_resource type="Script" uid="uid://bbrlj2kp4m6j8" path="res://tui/menu.gd" id="1_svucg"]
[ext_resource type="Script" uid="uid://dih7bg3ltoydv" path="res://tui/title_screen.gd" id="2_cqf2h"]

[sub_resource type="Theme" id="Theme_v6p8y"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svucg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -82.5
offset_right = 132.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 11

[node name="resume" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_v6p8y")
text = "Resume"
script = ExtResource("2_cqf2h")

[node name="settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_v6p8y")
text = "Settings"
script = ExtResource("2_cqf2h")

[node name="exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_v6p8y")
text = "Exit"
script = ExtResource("2_cqf2h")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 97.0
offset_top = 19.0
offset_right = 541.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 37
text = "Slime's Forest Adventure"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
